--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "clouduploader",
+  "name": "simpleclouduploader",
   "version": "0.0.2-alpha",
-  "description": "Cloud uploader",
+  "description": "Simple Cloud uploader",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
